fix: update ActuatorTypeController tests
addresses #451